# merge3-rs

./: Cargo.toml  README.md  disperse.toml
.github/workflows/: publish.yml  rust.yml
src/: lib.rs  main.rs
