[package]
name = "merge3"
version = "0.2.0"
edition = "2021"
description = "A simple merge tool for three-way merges"
license = "Apache-2.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
repository = "https://github.com/breezy-team/merge3-rs"

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
difflib = "0.4.0"
patiencediff = { version = "0.2.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
patiencediff = ["dep:patiencediff"]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "merge3"
path = "src/main.rs"
required-features = ["cli"]
